--- a/avm.csproj
+++ b/avm.csproj
@@ -13,6 +13,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.1"/>
+    <PackageReference Include="CoreAudio" Version="1.37.0"/>
     <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.756"/>
     <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.3.230724000"/>
   </ItemGroup>
