--- a/avm.csproj
+++ b/avm.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="CoreAudio" Version="1.37.0"/>
     <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.756"/>
     <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.3.230724000"/>
+    <PackageReference Include="System.Drawing.Common" Version="7.0.0"/>
   </ItemGroup>
 
 </Project>
